# LINUX_folders_manager_imitation

./: CMakeLists.txt  dir.cpp  dir.h  help.txt  main.cpp  navigation.cpp  navigation.h  terminal.cpp  terminal.h
